# stockwatch-qa

./: .flake8  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP_GUIDE.md  conftest.py  dashboard.html  pyproject.toml
.github/workflows/: flake8.yml  parallel-tests.yml
config/: .env.local  .env.qa
dashboard/: dashboard.html
src/: __init__.py
src/api/: __init__.py  finnhub_client.py
src/pages/: __init__.py  dashboard_page.py  example_page.py
src/stock_dashboard/: __init__.py
src/stock_dashboard/api/: finnhub_client.py
src/stock_dashboard/pages/: dashboard_page.py
src/tests/: __init__.py  test_dashboard_api_load.py  test_dashboard_async.py  test_dashboard_ui.py  test_dashboard_ui_simple.py  test_example.py  test_page_loader_pattern.py  test_unified_fixtures.py
src/tests/api/: test_company_profile_api.py  test_earnings_recommendations_api.py  test_integration_api.py  test_market_economic_api.py  test_news_api.py  test_quote_api.py  test_search_discovery_api.py
src/tests/ui/: test_dashboard_page.py
src/utils/: __init__.py  config.py  env_config.py  pages_loader.py
tests/api/: test_company_profile_api.py
tests/ui/: test_dashboard_page.py
