[project]
name = "stockwatch-qa"
version = "1.0.0"
description = "Playwright automation for custom UI dashboard using finnhub APIs"
requires-python = ">=3.8"
dependencies = [
    "pytest==9.0.2",
    "pytest-xdist==3.8.0",
    "pytest-rerunfailures==15.1.0",
    "pytest-playwright==0.7.2",
    "pytest-asyncio>=0.23.0",
    "playwright==1.58.0",
    "python-dotenv==1.2.1",
    "pytest-html>=3.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-json-report>=1.5.0",
    "flake8==7.3.0",
    "black==26.5.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--json-report",
    "--json-report-file=test-results/reports/report.json",
    "--junit-xml=test-results/reports/junit.xml",
    "--reruns=1",
    "--reruns-delay=2",
    "--screenshot=only-on-failure",
    "--video=retain-on-failure",
    "--tracing=retain-on-failure"
]
markers = [
    "scenario: Scenario description of the test"
]